fixed issue where section content was overflowing the body. Used overflow-x to solve issue

--- a/css/css.css
+++ b/css/css.css
@@ -12,6 +12,10 @@ html, body{
     height:100%;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 header {
     width: 100%;
     height: 80px;
